# novo

./: Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix
src/: compile.rs  db.rs  error.rs  expr.rs  grammar.lalrpop  interpreter.rs  ir.rs  lexer.rs  lib.rs  main.rs  op.rs  parser.rs  server.rs  stmt.rs  token.rs  type.rs  type_check.rs  value.rs
