[package]
name = "novo"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
lalrpop-util = "0.22.2"
logos = "0.15.1"
miette = { version = "7.6.0", features = ["fancy"] }
ordered-float = "5.0.0"
salsa = "0.23.0"
smol_str = "0.3.2"
thiserror = "2.0.16"

[build-dependencies]
lalrpop = "0.22.2"
