[package]
name = "novo"
version = "0.2.0"
edition = "2024"
description = "A fast, portable and safe domain specific language"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
clap-cargo = "0.17.1"
color-eyre = "0.6.5"
im = "15.1.0"
lalrpop-util = "0.22.2"
logos = "0.15.1"
miette = { version = "7.6.0", features = ["fancy"] }
ordered-float = "5.0.0"
regex = "1.11.2"
rustyline = "17.0.1"
salsa = "0.23.0"
smol_str = "0.3.2"
thiserror = "2.0.16"

[build-dependencies]
lalrpop = "0.22.2"

[features]
with-file-history = []
