[package]
name = "novo"
version = "0.3.0"
edition = "2024"
description = "A fast, portable and safe domain specific language"

[dependencies]
axum = "0.8.5"
clap = { version = "4.5.47", features = ["derive"] }
clap-cargo = "0.17.1"
im = { version = "15.1.0", features = ["serde"] }
indexmap = { version = "2.11.4", features = ["serde"] }
lalrpop-util = "0.22.2"
logos = "0.15.1"
miette = { version = "7.6.0", features = ["fancy"] }
ordered-float = { version = "5.0.0", features = ["serde"] }
regex = "1.11.2"
rustyline = "17.0.1"
salsa = "0.23.0"
serde = { version = "1.0.228", features = ["derive"] }
smol_str = { version = "0.3.2", features = ["serde"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }

[build-dependencies]
lalrpop = "0.22.2"

[features]
with-file-history = []
